--- a/src/main/resources/templates/qna/show.html
+++ b/src/main/resources/templates/qna/show.html
@@ -2,8 +2,9 @@
 <div class="container" id="main">
     <div class="col-md-12 col-sm-12 col-lg-12">
         <div class="panel panel-default">
+        {{#question}}
           <header class="qna-header">
-              <h2 class="qna-title">{{question.title}}</h2>
+              <h2 class="qna-title">{{title}}</h2>
           </header>
           <div class="content-main">
               <article class="article">
@@ -12,7 +13,7 @@
                           <img src="https://graph.facebook.com/v2.3/100000059371774/picture" class="article-author-thumb" alt="">
                       </div>
                       <div class="article-header-text">
-                          <a href="/users/92/kimmunsu" class="article-author-name">{{question.writer}}</a>
+                          <a href="/users/92/kimmunsu" class="article-author-name">{{writer}}</a>
                           <a href="/questions/413" class="article-header-time" title="퍼머링크">
                               2015-12-30 01:47
                               <i class="icon-link"></i>
@@ -20,21 +21,21 @@
                       </div>
                   </div>
                   <div class="article-doc">
-                      {{question.contents}}
+                      {{contents}}
                   </div>
                   <div class="article-util">
                       <ul class="article-util-list">
                           <li>
-                              <a class="link-modify-article" href="/questions/423/form">수정</a>
+                              <a class="link-modify-article" href="/questions/{{id}}/updateForm">수정</a>
                           </li>
                           <li>
-                              <form class="form-delete" action="/questions/423" method="POST">
-                                  <input type="hidden" name="_method" value="DELETE">
+                              <form class="form-delete" action="/questions/{{id}}/delete" method="POST">
+                                  <input type="hidden" name="_method" value="PUT">
                                   <button class="link-delete-article" type="submit">삭제</button>
                               </form>
                           </li>
                           <li>
-                              <a class="link-modify-article" href="/index.html">목록</a>
+                              <a class="link-modify-article" href="/">목록</a>
                           </li>
                       </ul>
                   </div>
@@ -114,6 +115,7 @@
                   </div>
               </div>
           </div>
+          {{/question}}
         </div>
     </div>
 </div>
