--- a/src/main/resources/templates/qna/form.html
+++ b/src/main/resources/templates/qna/form.html
@@ -2,10 +2,10 @@
 <div class="container" id="main">
    <div class="col-md-12 col-sm-12 col-lg-10 col-lg-offset-1">
       <div class="panel panel-default content-main">
-          <form name="question" method="post" action="/questions">
+          <form name="question" method="post" action="/questions/save/{{loginedUser.id}}">
               <div class="form-group">
                   <label for="writer">글쓴이</label>
-                  <input class="form-control" id="writer" name="writer" placeholder="글쓴이"/>
+                  <br />{{loginedUser.userId}}
               </div>
               <div class="form-group">
                   <label for="title">제목</label>
