--- a/src/main/resources/templates/qna/show.html
+++ b/src/main/resources/templates/qna/show.html
@@ -2,9 +2,9 @@
 <div class="container" id="main">
     <div class="col-md-12 col-sm-12 col-lg-12">
         <div class="panel panel-default">
-        {{#question}}
+        
           <header class="qna-header">
-              <h2 class="qna-title">{{title}}</h2>
+              <h2 class="qna-title">{{question.title}}</h2>
           </header>
           <div class="content-main">
               <article class="article">
@@ -13,7 +13,7 @@
                           <img src="https://graph.facebook.com/v2.3/100000059371774/picture" class="article-author-thumb" alt="">
                       </div>
                       <div class="article-header-text">
-                          <a href="/users/92/kimmunsu" class="article-author-name">{{writer}}</a>
+                          <a href="/users/92/kimmunsu" class="article-author-name">{{question.writer.userId}}</a>
                           <a href="/questions/413" class="article-header-time" title="퍼머링크">
                               2015-12-30 01:47
                               <i class="icon-link"></i>
@@ -21,7 +21,7 @@
                       </div>
                   </div>
                   <div class="article-doc">
-                      {{contents}}
+                      {{question.contents}}
                   </div>
                   <div class="article-util">
                       <ul class="article-util-list">
@@ -115,7 +115,7 @@
                   </div>
               </div>
           </div>
-          {{/question}}
+         
         </div>
     </div>
 </div>
