--- a/src/main/resources/templates/user/updateForm.html
+++ b/src/main/resources/templates/user/updateForm.html
@@ -2,11 +2,10 @@
 <div class="container" id="main">
    <div class="col-md-6 col-md-offset-3">
       <div class="panel panel-default content-main">
-      {{#user}}
-          <form name="question" method="post" action="/users/{{id}}/update">
+          <form name="question" method="post" action="/users/{{user.id}}">
               <div class="form-group">
                   <label for="userId">사용자 아이디</label>
-                  <input class="form-control" id="userId" name="userId" placeholder="{{userId}}" value="{{userId}}" readonly>
+					<br />{{user.userId}}
               </div>
               <div class="form-group">
                   <label for="password">비밀번호</label>
@@ -14,16 +13,15 @@
               </div>
               <div class="form-group">
                   <label for="name">이름</label>
-                  <input class="form-control" id="name" name="name" placeholder="{{name}}">
+                  <input class="form-control" id="name" name="name" placeholder="Name" value={{user.name}}>
               </div>
               <div class="form-group">
                   <label for="email">이메일</label>
-                  <input type="email" class="form-control" id="email" name="email" placeholder="{{email}}">
+                  <input type="email" class="form-control" id="email" name="email" value={{user.email}}>
               </div>
               <button type="submit" class="btn btn-success clearfix pull-right">수정</button>
               <div class="clearfix" />
           </form>
-        {{/user}}
         </div>
     </div>
 </div>
